<resources>
    <string name="app_name">Enfaixapp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="password">Contrasenya</string>
    <string name="username">Nom d\'usuari</string>
    <string name="about_you">Sobre tu</string>
    <string name="name">Nom</string>
    <string name="surnames">Cognoms</string>
    <string name="log_in">Log In</string>
    <string name="registrat">Registra\'t</string>
    <string name="email">Correu electrònic</string>
    <string name="repeat">Repeteix la contrasenya*</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="facebook_app_id">261255144289507</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
